--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,18 @@
     <title>BULLGATE</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
+
+
+
+
+
+
+
+
+
+
+
   <body>
     <div class="card">
       <div class="card2">
@@ -14,7 +26,7 @@
         <div class="header">
           <div class="header_log">
             <img
-              src="./assets//logo.png"
+              src="./assets//logo3.png"
               alt="bull-logo"
             />
           </div>
@@ -88,6 +100,18 @@
           </div>
           <!-- NETWORK LIST -->
 
+
+
+
+
+
+
+
+
+
+
+
+
           <div id="network_item" class="network_list">
             <p class="network_item">
               <svg
@@ -132,7 +156,7 @@
                   d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"
                 ></path>
               </svg>
-              <span>Binance Smart Chain</span>
+              <span>Binance Smart Chain Mainnet</span>
             </p>
             <p class="network_item">
               <svg
@@ -163,9 +187,39 @@
                 ></path>
               </svg>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               <span>Goerli test network</span>
             </p>
           </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
           <button id="add_network" class="button3 addStyle">Add Network</button>
         </div>
@@ -181,7 +235,7 @@
 
           <h1 class="home_title">BULLGATE</h1>
           <p>
-            Welcome to next generation crypto wallet exchange, the most complete
+            Welcome to next generation non custodial crypto wallet, the most complete
             dapp solution
           </p>
           <button id="openCreate" class="button3 connectWallet">
@@ -192,6 +246,16 @@
             <strong class="home_title" id="loginAccount"> LOGIN</strong>
           </p>
         </div>
+
+
+
+
+
+
+
+
+
+
 
         <!-- //CREATE POP UP -->
         <div id="create_popUp" class="create_popUp">
@@ -285,7 +349,27 @@
                 />
               </div>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <!-- <p class="space"></p> -->
+
+
+
+
+
+
 
             <div id="center" class="center">
               <div class="loader">
@@ -304,6 +388,9 @@
               </div>
             </div>
 
+
+
+
             <div id="accountData" class="accountData">
               <h3 id="accountInfo">Address</h3>
               <p id="createdAddress">Address:</p>
@@ -313,6 +400,13 @@
               <p id="createdMnmonic">mnemonic:</p>
             </div>
 
+
+
+
+
+
+
+
             <button id="sign_up" class="button3 connectWallet">Sign Up</button>
             <button id="goHomePage" class="button3 connectWallet">
               Go Back
@@ -320,15 +414,31 @@
           </div>
         </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- //LOGIN COMPONENT -->
         <div id="LoginUser" class="home_screen_login">
           <img
             class="home_screen_img"
-            src="./assets/11.png"
+            src="./assets/logo.png"
             alt=""
           />
 
-          <h1 class="home_title">BULLMASK</h1>
+          <h1 class="home_title">BULLGATE</h1>
           <p>Welcome back! The decentralized web awaits</p>
           <div id="login_form" class="form">
             <div class="field">
@@ -383,6 +493,14 @@
             >
           </p>
         </div>
+
+
+
+
+
+
+
+
 
 
 
@@ -639,8 +757,9 @@
 
           <div class="home_features">
             <div class="home_feature_item">
+              
               <img class="home_features_img" src="./assets/buy.png" alt="" />
-              <p class="text">Buy</p>
+              <p class="text" >Buy</p>
             </div>
             <div class="home_feature_item" id="open_Transfer">
               <img class="home_features_img" src="./assets/send.png" alt="" />
@@ -656,22 +775,67 @@
             </div>
           </div>
 
+
+
+
+
+
+
+
+          
           <div class="home_tabs">
             <p id="open_assets">Assets</p>
             <p id="logout">Logout</p>
             <p id="open_activity">Activity</p>
           </div>
+
+
+
+
+
+
+
+
+
+
           <p class="space"></p>
           <p class="space"></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
           <!-- //ASSETS -->
           <div id="assets" class="assets"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
           <!-- //ACTIVITY -->
           <div id="activity" class="activity">
             <div class="assets_item">
               <img
                 class="assets_item_img"
-                src="./assets/05.png"
+                src="./assets/11.png"
                 alt=""
               />
 
