--- a/popup.html
+++ b/popup.html
@@ -26,7 +26,7 @@
         <div class="header">
           <div class="header_log">
             <img
-              src="./assets//logo3.png"
+              src="./assets//logo.png"
               alt="bull-logo"
             />
           </div>
@@ -235,7 +235,7 @@
 
           <h1 class="home_title">BULLGATE</h1>
           <p>
-            Welcome to next generation non custodial crypto wallet, the most complete
+            Welcome to next generation crypto wallet, the most complete
             dapp solution
           </p>
           <button id="openCreate" class="button3 connectWallet">
@@ -434,7 +434,7 @@
         <div id="LoginUser" class="home_screen_login">
           <img
             class="home_screen_img"
-            src="./assets/logo.png"
+            src="./assets/logo3.png"
             alt=""
           />
 
