--- a/popup.html
+++ b/popup.html
@@ -433,7 +433,7 @@
         <!-- //LOGIN COMPONENT -->
         <div id="LoginUser" class="home_screen_login">
           <img
-            class="home_screen_img"
+            class="home_screen_img fade-in-breathe"
             src="./assets/logo3.png"
             alt=""
           />
