--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
         <!-- HEADER -->
         <div class="header">
           <div class="header_log">
-            <img
+            <img class="fade-in-breathe"
               src="./assets//logo.png"
               alt="bull-logo"
             />
@@ -433,7 +433,7 @@
         <!-- //LOGIN COMPONENT -->
         <div id="LoginUser" class="home_screen_login">
           <img
-            class="home_screen_img fade-in-breathe"
+            class="home_screen_img "
             src="./assets/logo3.png"
             alt=""
           />
