changed header network

--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,7 @@
                   />
                 </g>
               </svg>
-              <span id="selected_network">Polygon</span>
+              <span id="selected_network">Binance</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
