copy user adress is working

--- a/popup.html
+++ b/popup.html
@@ -710,7 +710,13 @@
         <!-- //MAIN BODY -->
         <div id="home" class="home">
           <div class="home_header">
-            <div>
+            <div class="Adress">
+              <img
+                id="copyAdress"
+                src="./assets/copy.svg"
+                alt=""
+                class="copyAdressIcon"
+              />
               <p id="userAddress">connecting...</p>
             </div>
             <div>
