--- a/popup.html
+++ b/popup.html
@@ -786,7 +786,7 @@
       src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
       type="application/javascript"
     ></script>
-    <!-- <script src="./ethers.js"></script> -->
+    <script src="./ethers.js"></script>
     <script src="./popup.js"></script>
   </body>
 </html>
