update privacy link

--- a/popup.html
+++ b/popup.html
@@ -300,11 +300,11 @@
               name="accept_terms"
               required
             />
-            <label>
-              By Creating An Account You Are Agreeing To The<br />
-              <span id="terms_link" class="terms_link"
-                >Terms And Conditions</span
-              >
+            <label style="font-size: 18px;" >
+              By Creating An Account You Are Agreeing To<br />
+              <span id="terms_link" class="terms_link" style="font-size: 12px;"
+                >Terms And Conditions</span ><span id="terms_link1" class="terms_link" style="font-size: 12px;"
+                >/Privacy Policy</span >
             </label>
           </div>
           <span class="error" id="accept_terms_error"></span>
