--- a/popup.html
+++ b/popup.html
@@ -591,7 +591,7 @@
           <h1 id="accountBlance">0.00 MATIC</h1>
 
           <div class="home_features">
-            <div class="home_feature_item">
+            <div class="home_feature_item" id="open_Buy">
               <img class="home_features_img" src="./assets/buy.png" alt="" />
               <p class="text">Buy</p>
             </div>
@@ -612,13 +612,30 @@
 
           <div class="home_tabs">
             <p id="open_assets">Assets</p>
-            <p>NFT</p>
+
+
+
+
+
+            <p id="open_nft">NFT</p>
+
+
+
+
             <p id="open_activity">Activity</p>
           </div>
+
+
+
+
           <p class="space"></p>
           <p class="space"></p>
           <!-- //ASSETS -->
           <div id="assets" class="assets"></div>
+
+
+
+
 
           <!-- //ACTIVITY -->
           <div id="activity" class="activity">
@@ -648,11 +665,14 @@
         </div>
       </div>
     </div>
+
+
+    
     <!-- <script
       src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
       type="application/javascript"
     ></script> -->
     <script src="./ethers.js"></script>
-    <script src="./popup.js"></script>
+    <script src="./test.js"></script>
   </body>
 </html>
