fixed add account

--- a/popup.html
+++ b/popup.html
@@ -547,10 +547,10 @@
               Import
             </button>
             <div class="accountList" id="accountList">
-              <!-- <div class="lists">
+              <div class="lists">
                 <p>1</p>
                 <p>sdhsgsdhsds8343433...</p>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
@@ -590,7 +590,7 @@
 
             <div class="home_feature_item" id="open_Import">
               <img class="home_features_img" src="./assets/import.png" alt="" />
-              <p class="text">Import</p>
+              <p class="text">Import Token</p>
             </div>
             <div class="home_feature_item" id="openAccountImport">
               <img class="home_features_img" src="./assets/user.png" alt="" />
